--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "next": "13.5.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "openai": "^4.31.0"
+    "react-dom": "18.2.0"
+  },
+  "engines": {
+    "node": ">=18.17.0"
   }
 }
