--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3000",
     "build": "next build",
     "start": "next start"
   },
+  "engines": { "node": ">=18.17.0" },
   "dependencies": {
     "next": "13.5.6",
     "react": "18.2.0",
