--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "skill-sprint",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3000",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
-  "engines": { "node": ">=18.17.0" },
   "dependencies": {
     "next": "13.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "engines": {
+    "node": ">=18.17.0"
   }
 }
